# fast-online-packing

./: .gitignore  LICENSE.txt  README.md  TODO.md  changelog.txt  main_test.py  pyrightconfig.json  requirements.txt  setup.cfg  setup.py  test_and_log.sh
docs/: .buildinfo  conf.py  genindex.html  helper.html  helper.rst  index.html  index.rst  install.html  instance_generator.html  mwu_max.html  objects.inv  offline_solvers.html  offline_solvers.rst  online_solver.html  online_solver.rst  packing_problem.html  py-modindex.html  quickstart.html  requirements.txt  search.html  searchindex.js
docs/_modules/: helper.html  index.html  instance_generator.html  mwu_max.html  online_solver.html  packing_problem.html
docs/_sources/: index.rst.txt  install.rst.txt  mwu_max.rst.txt  offline_solvers.rst.txt
docs/test/: offline_solvers.html
docs_src/: Makefile  conf.py  index.rst  install.rst  instance_generator.rst  packing_problem.rst  quickstart.rst
online_packing/: mwu.py  mwu_max.py  online_solver.py  packing_problem.py  solver.py
online_packing/instance_generator/: generator.py
online_packing/offline_solvers/: google_knapsack_solver.py  google_solver.py  python_mip_solver.py
online_packing/solvers/: base_solver.py  google_solver.py  python_mip_solver.py
src/fast_online_packing/: base_online_solver.py  helper.py  instance_generator.py  item.py  mwu_max.py  online_solver.py  packing_problem.py
src/online_packing/: helper.py  mwu_max.py  online_solver.py  packing_problem.py
tests/unit_tests/: test_data.py  test_helper.py  test_instance_generator.py  (+4 more)
(+11 files in other folders)
