[metadata]
name = fast-online-packing
version = 1.0.0
author = David Beyda
author_email = dbeyda@poli.ufrj.br
description = A fast algorithm for online packing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dbeyda/fast-online-packing/
project_urls =
    Documentation = https://dbeyda.github.io/fast-online-packing/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    mip >=1.13.0
    ortools >=8.2.8

[options.packages.find]
where = src